<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_revise_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindows"
    android:orientation="vertical">

    <include layout="@layout/actionbar_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/revisePassword_pre"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/revisePrePassword"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp" />

        <include layout="@layout/divide_line" />

        <EditText
            android:id="@+id/revisePassword_new"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/reviseNewPassword"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp" />

        <include layout="@layout/divide_line" />

        <EditText
            android:id="@+id/revisePassword_confirm"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/reviseConfirmPassword"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>
